Modificando os servlets de busca